--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <noscript>
   <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
+<button onclick="toggle()">Toggle</button>
 <div id="app"></div>
 
 <script type="module" src="/src/main.js"></script>
@@ -29,6 +30,10 @@
   window.addEventListener('load', function () {
     window.tido = new window.Tido();
   });
+
+  function toggle() {
+    window.tido.setTheme('dark');
+  }
   </script>
 </body>
 </html>
